--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laura Zibra - Psicologa &amp; Specializzanda in Psicoterapia</title>
     <meta name="description" content="Una mente compagna nel viaggio verso la consapevolezza di sé, delle proprie relazioni e del proprio posto nel mondo.">
-    <link rel="stylesheet" href="https://example.com/style.css">
+    <link rel="stylesheet" href="style.css">
     
 </head>
 <body>
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar">
             <div class="nav-brand">
-                <a href="https://example.com/">Laura Zibra</a>
+                <a href="#">Laura Zibra</a>
             </div>
             <button class="nav-toggle" aria-label="Toggle navigation">
                 <span class="hamburger"></span>
@@ -33,10 +33,10 @@
 <!-- Hero Section -->
 <section class="hero">
     <div class="hero-decoration hero-decoration-left">
-        <img src="https://example.com/images/macchia_arancione.png" alt="">
+        <img src="images/macchia_arancione.png" alt="">
     </div>
     <div class="hero-decoration hero-decoration-right">
-        <img src="https://example.com/images/macchia_gialla.png" alt="">
+        <img src="images/macchia_gialla.png" alt="">
     </div>
     <div class="hero-content">
         <h1>Laura Zibra</h1>
@@ -57,7 +57,7 @@
                 <p>Credo fermamente nelle relazioni e nell'importanza di conoscere se stessi per diventare attori attivi della propria vita.</p>
             </div>
             <div class="column-image">
-                <img src="https://example.com/images/laura-profile.jpg" alt="Laura Zibra" class="profile-image">
+                <img src="images/laura-profile.jpg" alt="Laura Zibra" class="profile-image">
             </div>
         </div>
     </div>
@@ -101,25 +101,25 @@
         <div class="approach-cards">
             <div class="approach-card">
                 <div class="approach-icon">
-                    <img src="https://example.com/images/puzzle-icon.png" alt="Puzzle">
+                    <img src="images/puzzle-icon.png" alt="Puzzle">
                 </div>
                 <h3>Fare il puzzle della propria storia</h3>
             </div>
             <div class="approach-card">
                 <div class="approach-icon">
-                    <img src="https://example.com/images/matassa-icon.png" alt="Matassa">
+                    <img src="images/matassa-icon.png" alt="Matassa">
                 </div>
                 <h3>Sbrogliare<br>la matassa</h3>
             </div>
             <div class="approach-card">
                 <div class="approach-icon">
-                    <img src="https://example.com/images/labirinto-icon.png" alt="Labirinto">
+                    <img src="images/labirinto-icon.png" alt="Labirinto">
                 </div>
                 <h3>Attraversare il labirinto dei nodi</h3>
             </div>
             <div class="approach-card">
                 <div class="approach-icon">
-                    <img src="https://example.com/images/illuminare-icon.png" alt="Illuminare">
+                    <img src="images/illuminare-icon.png" alt="Illuminare">
                 </div>
                 <h3>Illuminare le zone d'ombra</h3>
             </div>
