--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
 
             <div class="contact-form">
                 <h3>Rimani in contatto</h3>
-                <form action="#" method="POST">
+                <form action="https://api.web3forms.com/submit" method="POST">
+                    <input type="hidden" name="access_key" value="33625e5d-754a-428e-ac82-ddbb712275bf">
                     <div class="form-group">
                         <label for="name">Nome e Cognome*</label>
                         <input type="text" id="name" name="name" required>
