Added favicon to index html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Laura Zibra - Psicologa &amp; Specializzanda in Psicoterapia</title>
     <meta name="description" content="Una mente compagna nel viaggio verso la consapevolezza di sé, delle proprie relazioni e del proprio posto nel mondo.">
     <link rel="stylesheet" href="style.css">
-    
+    <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
 </head>
 <body>
     
