Fixed absolute links, updated sitemap

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laura Zibra - Psicologa &amp; Specializzanda in Psicoterapia</title>
     <meta name="description" content="Una mente compagna nel viaggio verso la consapevolezza di sé, delle proprie relazioni e del proprio posto nel mondo.">
-    <link rel="icon" type="image/svg+xml" href="https://example.com/images/favicon.svg">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://example.com/images/favicon-32x32.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://example.com/images/apple-touch-icon.png">
-    <link rel="stylesheet" href="https://example.com/style.css">
+    <link rel="icon" type="image/svg+xml" href="https://laurazibra.it/images/favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://laurazibra.it/images/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://laurazibra.it/images/apple-touch-icon.png">
+    <link rel="stylesheet" href="https://laurazibra.it/style.css">
     
 </head>
 <body>
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar">
             <div class="nav-brand">
-                <a href="https://example.com/">Laura Zibra</a>
+                <a href="https://laurazibra.it/">Laura Zibra</a>
             </div>
             <button class="nav-toggle" aria-label="Toggle navigation">
                 <span class="hamburger"></span>
@@ -37,10 +37,10 @@
 <!-- Hero Section -->
 <section class="hero">
     <div class="hero-decoration hero-decoration-left">
-        <img src="https://example.com/images/macchia_arancione.png" alt="">
+        <img src="https://laurazibra.it/images/macchia_arancione.png" alt="">
     </div>
     <div class="hero-decoration hero-decoration-right">
-        <img src="https://example.com/images/macchia_gialla.png" alt="">
+        <img src="https://laurazibra.it/images/macchia_gialla.png" alt="">
     </div>
     <div class="hero-content">
         <h1>Laura Zibra</h1>
@@ -61,7 +61,7 @@
                 <p>Credo fermamente nelle relazioni e nell'importanza di conoscere se stessi per diventare attori attivi della propria vita.</p>
             </div>
             <div class="column-image">
-                <img src="https://example.com/images/laura-profile.jpg" alt="Laura Zibra" class="profile-image">
+                <img src="https://laurazibra.it/images/laura-profile.jpg" alt="Laura Zibra" class="profile-image">
             </div>
         </div>
     </div>
@@ -105,25 +105,25 @@
         <div class="approach-cards">
             <div class="approach-card">
                 <div class="approach-icon">
-                    <img src="https://example.com/images/puzzle-icon.png" alt="Puzzle">
+                    <img src="https://laurazibra.it/images/puzzle-icon.png" alt="Puzzle">
                 </div>
                 <h3>Fare il puzzle<br class="mobile-br"> della propria storia</h3>
             </div>
             <div class="approach-card">
                 <div class="approach-icon">
-                    <img src="https://example.com/images/matassa-icon.png" alt="Matassa">
+                    <img src="https://laurazibra.it/images/matassa-icon.png" alt="Matassa">
                 </div>
                 <h3>Sbrogliare<br>la matassa</h3>
             </div>
             <div class="approach-card">
                 <div class="approach-icon">
-                    <img src="https://example.com/images/labirinto-icon.png" alt="Labirinto">
+                    <img src="https://laurazibra.it/images/labirinto-icon.png" alt="Labirinto">
                 </div>
                 <h3>Attraversare<br class="mobile-br"> il labirinto dei nodi</h3>
             </div>
             <div class="approach-card">
                 <div class="approach-icon">
-                    <img src="https://example.com/images/illuminare-icon.png" alt="Illuminare">
+                    <img src="https://laurazibra.it/images/illuminare-icon.png" alt="Illuminare">
                 </div>
                 <h3>Illuminare<br class="mobile-br"> le zone d'ombra</h3>
             </div>
